<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MovieDB</string>
    <string name="toolbar_title">MovieDB</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="top_rated">Top Rated</string>
    <string name="review_count"><xliff:g>%d</xliff:g> reviews</string>
    <string name="settings">Settings</string>
    <string name="movieImageDetails">Profile</string>
    <string name="about_app">About</string>
    <string name="more">More</string>
    <string name="wishlist">Whishlist</string>
    <string name="seenlist">Seenlist</string>
    <string name="near_by">Nearby</string>
    <string name="reviews"><xliff:g>%s</xliff:g> Reviews</string>
    <string name="season_number">Season <xliff:g>%d</xliff:g></string>
    <string name="logout_google">Logout</string>
    <string name="facebook_app_id">853783121791580</string>
    <string name="fb_login_protocol_scheme">fb853783121791580</string>
    <string name="toolbar_home_icon">Home</string>
    <string name="actor_age_text">(<xliff:g>%d</xliff:g>)</string>
    <string name="home">Home</string>
    <string name="delete_all">Delete All</string>
    <string name="profile_name_with_sign">Hello, <xliff:g>%s</xliff:g></string>
    <string name="profile_name_without_sign">Hello, Guest</string>
    <string name="account_exist">Have an account <u><b>Sing in</b></u></string>
    <string name="new_account"><u><b>Create new account</b></u></string>
    <string name="overview">Overview</string>
    <string name="content">Content</string>
    <string name="keywords">Keywords</string>
    <string name="casts">Casts</string>
    <string name="crew">Crew</string>
    <string name="director">Director:</string>
    <string name="stephen_john">Stephen John</string>
    <string name="recommendation_movies">Recommendation Movies</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="change_password">Change Password</string>
    <string name="update_account">Update Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="web_client_id">813758733444-gd7htav5c22m69q66argmnvmt927h60k.apps.googleusercontent.com</string>
    <string name="web_client_secret">qD5aIiE6VVElmOKc8lnKhEk7</string>
    <string name="please_confirm_your_account">Please confirm your account</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="action_delete_account">delete account</string>
    <string name="action_update_password">update password</string>
    <string name="action_update_email">update email</string>
    <string name="new_password_hint">Please enter your new Password</string>
    <string name="confirm_new_password_hint">Please confirm your new Password</string>
    <string name="message_dialog_ok">OK</string>
    <string name="version_string">Version <xliff:g>%s</xliff:g></string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="email_changed_successfully">Email changed successfully</string>
    <string name="account_deleted_successfully">Account deleted successfully</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="please_confirm_your_password">please confirm your password</string>
    <string name="please_enter_your_new_email">Please enter your new email</string>
    <string name="please_confirm_your_new_email">Please confirm your new email</string>
    <string name="network_connection_error">Please check your internet connection</string>
    <string name="network_disconnected">disconnected</string>
    <string name="network_connected">connected</string>
    <string name="episode_count"><xliff:g>%d</xliff:g> Episodes</string>
</resources>
