<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/now_playing"
            android:icon="@drawable/now_playing"
            android:title="@string/now_playing" />

        <item
            android:id="@+id/popular"
            android:icon="@drawable/popular"
            android:title="@string/popular" />

        <item
            android:id="@+id/upcoming"
            android:icon="@drawable/upcoming"
            android:title="@string/upcoming" />

        <item
            android:id="@+id/top_rated"
            android:icon="@drawable/top_rated"
            android:title="@string/top_rated" />
    </group>
    <item android:title="@string/more">
        <menu>
            <group android:id="@+id/group_two">
                <item
                    android:id="@+id/near_by"
                    android:icon="@drawable/outline_track_changes_black_24"
                    android:title="@string/near_by" />
                <item
                    android:id="@+id/about_app"
                    android:icon="@drawable/outline_info_black_24"
                    android:title="@string/about_app" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/baseline_settings_black_24"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>
</menu>